final reduce change